# aurora-os

./: .bochsrc  .gitignore  Cargo.toml  Makefile  README.md  TROUBLESHOOTING.md  compile_flags.txt  make.py  qemu.gdb
.cargo/: config.toml
aurora_kernel/: Cargo.toml  Makefile  make.py
aurora_kernel/src/: lib.rs  main.rs
aurora_kernel/src/kernel/: gdt.rs  interrupts.rs  kernel.rs  memory.rs  mod.rs  tty.rs  vga.rs  vga_tests.rs
boot/: grub.cfg
integration_tests/: Cargo.toml  make.py
integration_tests/src/: test_boot.rs  test_should_panic.rs
integration_tests/src/interrupts/: test_isr_breakpoint.rs
integration_tests/src/testutils/: mod.rs  panic.rs
kernel/: gdt.hpp  gdt.s  idt.hpp  idt.s  isr.cpp  isr.hpp  kdefs.hpp  kernel.c  kernel.cpp  kernel.hpp  tty.cpp  tty.hpp
kernel/asm/: io.hpp
libcpp/: stdio.cpp  stdio.hpp
tools/: buildutils.py  common.py  makeutils.py
