[package]
name = "aurora_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
test = false

[dependencies]
bootloader = "0.9.8"
uart_16550 = "0.3.0"
x86_64 = "0.14.11"

[dev-dependencies]
googletest = "0.10.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
