[package]
name = "aurora_kernel"
version = "0.1.0"
edition = "2021"

[lib]
test = false

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
uart_16550 = "0.3.0"
x86_64 = "0.14.11"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"

[dev-dependencies]
googletest = "0.10.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
